<resources>
    <string name="app_name">Network Tools</string>

    <string name="action_settings">Settings</string>
    <string name="hint_ip_address">IP Address or Hostname</string>
    <string name="ping">Ping</string>
    <string name="wol">Wake-On-Lan</string>
    <string name="port_scan">Port Scan</string>
    <string name="github_page">Github</string>
    <string name="github_url">https://github.com/stealthcopter/AndroidNetworkTools</string>
    <string name="subnet">Subnet Devices</string>
    <string name="timeout">** Timeout **</string>
</resources>